globus-openssl-module (4.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jan 2014 10:18:45 -0500

globus-openssl-module (3.3-1) unstable; urgency=low

  * Be more tolerant if a symlink fails

 -- Globus Toolkit <support@globus.org>  Fri, 14 Jun 2013 12:01:58 -0400

globus-openssl-module (3.2-2) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-openssl-module (3.2-1) unstable; urgency=low

  * RIC-233: Move admin tool globus-update-certificate-dir to sbindir

 -- Globus Toolkit <support@globus.org>  Tue, 14 Feb 2012 14:44:28 -0500

globus-openssl-module (3.1-2) unstable; urgency=low

  * Update for 5.2.0 release

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500

globus-openssl-module (3.1-1) unstable; urgency=low

  * Remove obsolete get-orig-source rules

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2011 14:54:53 -0500

globus-openssl-module (3.1-0) unstable; urgency=low

  * Update to 5.1.3

 -- Globus Toolkit <support@globus.org>  Tue, 15 Nov 2011 16:26:13 -0500

globus-openssl-module (2.0-0GT5.1.1a) unstable; urgency=low

  * Non-Maintainer Upload -- Update to Globus Toolkit 5.1.1

 -- Globus Toolkit <support@globus.org>  Wed, 25 May 2011 05:28:08 -0400

globus-openssl-module (1.3-1) unstable; urgency=low

  * Update to Globus Toolkit 5.0.2
  * Drop patch globus-openssl-module-oid.patch (fixed upstream)

 -- Mattias Ellert <mattias.ellert@fysast.uu.se>  Mon, 19 Jul 2010 05:21:32 +0200

globus-openssl-module (1.2-2) unstable; urgency=low

  * Converting to package format 3.0 (quilt)
  * Add new build dependency on texlive-font-utils due to changes in texlive
    packaging (epstopdf moved there) (Closes: #583056)
  * Fix OID registration pollution

 -- Mattias Ellert <mattias.ellert@fysast.uu.se>  Fri, 04 Jun 2010 04:43:30 +0200

globus-openssl-module (1.2-1) unstable; urgency=low
